@@ -1108,7 +1108,6 @@ class PokerAvatarTestCase(unittest.TestCase):
             data = messageOutput.getvalue()
             sys.stdout = sys.__stdout__
             messageOutput.close()
-            print "Got text: " + data
             self.assertEqual(data.find(info['output']) >= 0, True)
 
             found = False
@@ -2196,8 +2195,6 @@ class PokerAvatarTestCase(unittest.TestCase):
                                                     serial = client.getSerial()))
         found = 0
         for packet in avatar.resetPacketsQueue():
-            print "MYPACKET: "
-            print packet
             if packet.type == PACKET_POKER_PLAYER_LEAVE:
                 found += 1
                 self.assertEquals(packet.game_id, gameId)
@@ -2219,6 +2216,68 @@ class PokerAvatarTestCase(unittest.TestCase):
         d.addCallback(self.leaveTable, 0, 101)
         return d
     # ------------------------------------------------------------------------
+    # This test handles various requests that expect some sort of string
+    # output as a return (and possibly a single packet).  This is similar to the
+    # requestsWithWrongSerial() above, but in this case, we're using the
+    # right serial and the game is just in the wrong state or somesuch.
+    def variousPacketsWithStringOrSinglePacketReturn(self, (client, packet), avid, gameId):
+        import StringIO
+
+        avatar = self.service.avatars[avid]
+        packetTests = {
+            'muck_accept' : { 'output' : 
+                          "[PokerGame %d] ERROR: muck: game state muck expected, found null" % gameId,
+                          'packet' :
+                                  PacketPokerMuckAccept(game_id = gameId,
+                                                        serial = client.getSerial()) },
+            'muck_deny' : { 'output' : 
+                          "[PokerGame %d] ERROR: muck: game state muck expected, found null" % gameId,
+                          'packet' :
+                                  PacketPokerMuckDeny(game_id = gameId,
+                                                        serial = client.getSerial()) },            'wait_blind' : { 'output' : 
+                          "[PokerGame %d] ERROR: player %d cannot pay blind while in state null" % (gameId, client.getSerial()),
+                          'packet' :
+                                  PacketPokerWaitBigBlind(game_id = gameId,
+                                                        serial = client.getSerial()) },
+            }
+        # Next, we loop through all the serial-related bad pack list,
+        # attempting to handle each one.  Setup stdout to go to a string
+        # so that we can test if they generate the right printed output.
+        # Also, catch any error packets for those we expect to receive.
+        for (key, info) in packetTests.iteritems():
+            avatar.resetPacketsQueue()
+            avatar.queuePackets()
+            messageOutput = StringIO.StringIO()
+            sys.stdout = messageOutput
+            avatar.handlePacketLogic(info['packet'])
+            data = messageOutput.getvalue()
+            sys.stdout = sys.__stdout__
+            messageOutput.close()
+            print "Got text: START\n" + data + "\nEND\n"
+            self.assertEqual(data.find(info['output']) >= 0, True)
+
+            found = False
+            for packet in avatar.resetPacketsQueue():
+                found = True
+                self.assertEquals(packet.type, info['err_type'])
+                if info.has_key('other_type'):
+                    self.assertEquals(info['other_type'], packet.other_type)
+            self.assertEquals(found, info.has_key('err_type'))
+        return (client, packet)
+    # ------------------------------------------------------------------------
+    def test52_variousPackets(self):
+        d = self.client_factory[0].established_deferred
+        d.addCallback(self.setupCallbackChain)
+        d.addCallback(self.login, 0)
+        d.addCallback(self.joinTable, 0, 101, 'Table2', '2-4-limit')
+        d.addCallback(self.seatTable, 0, 101)
+        d.addCallback(self.buyInTable, 0, 101, 1000)
+        d.addCallback(self.autoBlindAnte, 0, 101)
+        d.addCallback(self.sitTable, 0, 101)
+        d.addCallback(self.readyToPlay, 0, 101)
+        d.addCallback(self.variousRequestsWithStringReturnOnly, 0, 101)
+        return d
+    # ------------------------------------------------------------------------
     def tinyFunctions(self, (client, packet), id):
         avatar = self.service.avatars[id]
         self.assertEquals(avatar.getUrl(), "random")
@@ -2234,7 +2293,7 @@ class PokerAvatarTestCase(unittest.TestCase):
     # ------------------------------------------------------------------------
 def Run():
     loader = runner.TestLoader()
-#    loader.methodPrefix = "test51"
+    loader.methodPrefix = "test52"
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerAvatarTestCase))
     return runner.TrialRunner(
